--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/me.jpg" alt="" /></span>
-								<p>Hi! I'm Tanmay Mahindrakar. I am excited that you are here to know bit more about me. I am a Graduate Student in Computer Software at Indiana University, Bloomington. I am fascinated with the advancements of Software Industry since past couple of decades and the way it is moving forward. I am interesteed in building large scale software systems with advanced methods to manage enormous amount of data which has direct impact in the lives of society. Feel free to peruse my skills, work experience and awesome projects.</p>
+								<p>Hi! I'm Tanmay. I am excited that you are here to know bit more about me. I am a Graduate Student in Computer Software at Indiana University, Bloomington. I am fascinated with the advancements of Software Industry since past couple of decades and the way it is moving forward. I am interesteed in building large scale software systems with advanced methods to manage enormous amount of data which has direct impact in the lives of society. Feel free to peruse my skills, work experience and awesome projects.</p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<span class="image main"><img src="images/work-laptop.webp" alt="" /></span>
 								<p>I started my journey as a research intern with Indian Statistical Institute followed by working with the technology giant, Tata Consultancy Services as a software developer. My responsibilites are briefed below.</p>
 								<ul><b>Research Intern at Indian Statistical Institute:</b>
 									<li>Implemented a sentimental based analytical project using Clustering which increased precision by 23%.</li>
