--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/work-laptop.webp" alt="" /></span>
+								<span class="image main"><img src="images/laptop.png" alt="" /></span>
 								<p>I started my journey as a research intern with Indian Statistical Institute followed by working with the technology giant, Tata Consultancy Services as a software developer. My responsibilites are briefed below.</p>
 								<ul><b>Research Intern at Indian Statistical Institute:</b>
 									<li>Implemented a sentimental based analytical project using Clustering which increased precision by 23%.</li>
