--- a/index.html
+++ b/index.html
@@ -87,10 +87,26 @@
 									<li>Spearheaded an attrition prediction system for robust companies by bypassing the generic mono-pool algorithm selection that achieved flexibility and improved accuracy by 50%.</li>
 									<li>Used Support Vector Machine, Gradient Boosting, Naïve Bayes, and Neural Network prediction models.</li>
 								</ul>
-								<ul><b><a href = "https://github.com/tanmay-m/Home-Credit-Default-Risk-">Home Credit Default Risk.</a></b> 
+								<ul><b><a href = "https://github.com/tanmay-m/Home-Credit-Default-Risk-">Home Credit Default Risk </a><a href = "https://github.com/tanmay-m/Home-Credit-Default-Risk-" class="icon brands fa-github"></a></b> 
 									<li>Orchestrated and configured classification model with Model Pipelining, Exploratory Data Analysis and Feature Selection using Machine Learning and Deep Learning Algorithm like Multilayer Perceptron, Decision Trees and achieved an overall accuracy of 93% with hyperparameter tuning. Improved base accuracy using SoftMax and Rectified Linear Unit activation function with Tensor Board result visualization. </li>
 								</ul>
 
+								<ul><b><a href = "https://github.com/tanmay-m/Path-Navigation">Path Navigation </a><a href = "https://github.com/tanmay-m/Path-Navigation" class="icon brands fa-github"></a></b> 
+									<li>Utilized the concept of breadth first search to find the shortest given a board with obstacles.</li>
+								</ul>
+
+								<ul><b><a href = "https://github.com/tanmay-m/Heuristic-Search">Heuristic Search </a><a href = "https://github.com/tanmay-m/Heuristic-Search" class="icon brands fa-github"></a></b> 
+									<li>Implemented heuristic cost functions and used them to find the shortest distance to the goal state for various problems.</li>
+								</ul>
+
+								<ul><b><a href = "https://github.com/tanmay-m/Board_Game_AI-and-Truth-Seeking-">Game Theory and Spam or Ham </a><a href = "https://github.com/tanmay-m/Board_Game_AI-and-Truth-Seeking-" class="icon brands fa-github"></a></b> 
+									<li>Using game theory, designed an Artificial Intelligence for a game similar to checkers that outputs best moves.</li>
+									<li>Applied Naive Bayes Classifier to predict if the given document is spam or not spam.</li>
+								</ul>
+
+								<ul><b><a href = "https://github.com/tanmay-m/NLP-and-Computer-Vision">NLP and Computer Vision </a> <a href = "https://github.com/tanmay-m/NLP-and-Computer-Vision" class="icon brands fa-github"></a></b> 
+									<li>Utilized the principles of Hidden Markov Models to carry out Optical Character Recognition and Natural Language Processing</li>
+								</ul>
 
 							</article>
 
