--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Tanmay Mahindrakar</h1>
-								<p>Masters of Computer Science at Indiana University, Bloomington<br/>
-								Welcome to my webiste!</p>
-								<p>You can contact me at: <b><i>tmahind@iu.edu</i></b></p>
+								<p><h3>Masters of Computer Science at Indiana University, Bloomington</h3><br/>
+								<h3>Welcome to my webiste!</h3></p>
+								<p><h3>You can contact me at: <b><i>tmahind@iu.edu</i></b></h3></p>
 								<p><ul class="icons">
 									<li><a href="https://github.com/tanmay-m" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="https://www.linkedin.com/in/tanmay-mahindrakar-55086412a/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
@@ -36,10 +36,11 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
-								<li><a href="#projects">Projects</a></li>
-								<li><a href="#education">Education</a></li>
+								<li><a href="#intro"><b>Intro</b></a></li>
+								<li><a href="#work"><b>Work</b></a></li>
+								<li><a href="#projects"><b>Projects</b></a></li>
+								<li><a href="#education"><b>Education</b></a></li>
+								<li><a href="#skills"><b>Skills</b></a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -131,6 +132,39 @@
 
 
 						</article>
+
+						<!-- Skills -->
+						<article id="skills">
+							<h2 class="major">Skills</h2>
+							<p>Here are some of my skills!</p>
+							<ul><b>Languages</b>
+								<li>Python</li>
+								<li>Java</li>
+								<li>HTML</li>
+								<li>C++</li>
+								<li>Kotlin</li>
+							</ul>
+							<ul><b>Database</b>
+								<li>MySQL</li>
+								<li>SQL</li>
+								<li>AWS Dynamo DB</li>
+							</ul>
+							<ul><b>Frameworks and Technologies</b>
+								<li>Django</li>
+								<li>Flask</li>
+								<li>Postman</li>
+								<li>PyTorch</li>
+								<li>Google Firecloud/Firebase</li>
+								<li>AWS CloudWatch</li>
+								<li>AWS S3</li>
+								<li>Microsoft Power BI</li>
+							</ul>
+
+							
+
+
+						</article>
+
 
 						<!-- Contact -->
 							<!-- <article id="contact">
