Added link to research paper

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 								<li><i>Coursework: </i>Advanced Data Structures, Programming Fundamentals, Computer Architecture, Operating Systems, Object Oriented Programming, Machine Learning and Artificial Intelligence</li>
 								<li><i>GPA: </i>8.98/10.0</li>
 								<li><i>Duration: </i>Fall 2016 - Spring 2020</li>
+								<li><i>Research Papers: </i><a href = "https://github.com/tanmay-m/Research-Paper">Click here </a></li>
 							</ul>
 
 							
