research paper link location change

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 								<ul><b>Employee Attrition Prediction.</b><n><i>(Technologies: Software Development using Django Framework with Python.)</i>                                                                                                             </i>      	
 									<li>Spearheaded an attrition prediction system for robust companies by bypassing the generic mono-pool algorithm selection that achieved flexibility and improved accuracy by 50%.</li>
 									<li>Used Support Vector Machine, Gradient Boosting, Naïve Bayes, and Neural Network prediction models.</li>
+									<li><a href = "https://github.com/tanmay-m/Research-Paper">Research Paper </a><a href = "https://github.com/tanmay-m/Research-Paper" class="icon brands fa-github"></a></li>
 								</ul>
 								<ul><b><a href = "https://github.com/tanmay-m/Home-Credit-Default-Risk-">Home Credit Default Risk </a><a href = "https://github.com/tanmay-m/Home-Credit-Default-Risk-" class="icon brands fa-github"></a></b> 
 									<li>Orchestrated and configured classification model with Model Pipelining, Exploratory Data Analysis and Feature Selection using Machine Learning and Deep Learning Algorithm like Multilayer Perceptron, Decision Trees and achieved an overall accuracy of 93% with hyperparameter tuning. Improved base accuracy using SoftMax and Rectified Linear Unit activation function with Tensor Board result visualization. </li>
@@ -126,7 +127,6 @@
 								<li><i>Coursework: </i>Advanced Data Structures, Programming Fundamentals, Computer Architecture, Operating Systems, Object Oriented Programming, Machine Learning and Artificial Intelligence</li>
 								<li><i>GPA: </i>8.98/10.0</li>
 								<li><i>Duration: </i>Fall 2016 - Spring 2020</li>
-								<li><i>Research Papers: </i><a href = "https://github.com/tanmay-m/Research-Paper">Click here </a></li>
 							</ul>
 
 							
