--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/me.jpg" alt="" /></span>
-								<p>Hi! I'm Tanmay. I am excited that you are here to know bit more about me. I am a Graduate Student in Computer Software at Indiana University, Bloomington. I am fascinated with the advancements of Software Industry since past couple of decades and the way it is moving forward. I am interesteed in building large scale software systems with advanced methods to manage enormous amount of data which has direct impact in the lives of society. Feel free to peruse my skills, work experience and awesome projects.</p>
+								<p>Hi! I'm Tanmay. I am excited that you are here to know bit more about me. I am a Graduate Student in Computer Software at Indiana University, Bloomington. I am fascinated with the advancements of Software Industry since past couple of decades and the way it is moving forward. I am interested in building large scale software systems with advanced methods to manage enormous amount of data which has direct impact in the lives of society. Feel free to peruse my skills, work experience and awesome projects.</p>
 							</article>
 
 						<!-- Work -->
