--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@
 								<li>AWS CloudWatch</li>
 								<li>AWS S3</li>
 								<li>Microsoft Power BI</li>
+								<li>Git/GitHub</li>
+								<li>Bitbucket</li>
 							</ul>
 
 							
