--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/laptop.png" alt="" /></span>
-								<p>I started my journey as a research intern with Indian Statistical Institute followed by working with the technology giant, Tata Consultancy Services as a software developer. My responsibilites are briefed below.</p>
-								<ul><b>Research Intern at Indian Statistical Institute:</b>
-									<li>Implemented a sentimental based analytical project using Clustering which increased precision by 23%.</li>
-									<li>Researched and applied Clustering, Classification and Neural Networks algorithms utilizing Sigmoid, Hyperbolic Tangent, SoftMax and Rectified Linear Unit activation functions for 3+ projects.</li>
-									<li>Reduced error rate by 30% in an aggressive 3-month deadline for a research-based project for employee attrition prediction. </li>
+								<p>I started my journey as a research intern with Indian Statistical Institute followed by working with the technology giant, Tata Consultancy Services as a software developer. During my pursuit of the Masters program, I had the privilege of collaborating with Ericsson, where I engaged with cutting-edge technology. I undertook a range of responsibilities, which are outlined below.</p>
+								<ul><b>Data Science Intern at Ericsson:</b>
+									<li>Developed Large Language Models, including Masked Language Modeling, from scratch. Successfully trained the model on customer telecom data, achieving a strong perplexity score.</li>
+									<li>Researched and harnessed fine-tuned GPT-based Causal Language Models and Masked Language Models for downstream tasks, significantly boosting entity recognition accuracy beyond standard Language Models.</li>
+									<li>Pioneered a novel approach to Active Learning, resulting in an impressive 30% accuracy improvement and a remarkable 35% reduction in computation requirements. A research paper detailing this method and a patent is currently under review with the Ericsson Research Review Committee.</li>
+									<li>Constructed Knowledge Graphs from customer data using Graph Neural Networks with a self-attention mechanism, harnessing this innovative approach for personalized recommendations.</li>
 								</ul>
-
 								<ul><b>Software Developer at Tata Consultancy Services:</b>
 									<li>Developed a shipment tracking and delivery E-commerce software for over 750K+ users using native Android-Kotlin, AWS Dynamo Database, AWS CloudWatch, AWS S3, Postman and Google Firebase.</li>
 									<li>Integrated AWS lambda functions using REST API and added Firebase support resulting in 47% performance improvement by providing Statistical Analytics, App Crash Analytics and Remote Configurations.</li>
@@ -75,6 +75,13 @@
 									<li>Maintained Microsoft Power BI dashboards providing analytical and statistical overview for all stakeholders.</li>
 									<li>Collaborated with stakeholders to discuss requirements to improve software design and scalability.</li>
 								</ul>
+								<ul><b>Research Intern at Indian Statistical Institute:</b>
+									<li>Implemented a sentimental based analytical project using Clustering which increased precision by 23%.</li>
+									<li>Researched and applied Clustering, Classification and Neural Networks algorithms utilizing Sigmoid, Hyperbolic Tangent, SoftMax and Rectified Linear Unit activation functions for 3+ projects.</li>
+									<li>Reduced error rate by 30% in an aggressive 3-month deadline for a research-based project for employee attrition prediction. </li>
+								</ul>
+
+		
 								
 
 							</article>
@@ -84,11 +91,22 @@
 								<h2 class="major">Projects</h2>
 								<span class="image main"><img src="images/data-science-321.jpg" alt="" /></span>
 								<p>My project work covers mostly software engineering as well as data science projects, some of which are noted down below. Do check them out!</p>
+								<ul><b><a href = "https://huggingface.co/sohan-ai/sentiment-analysis-model-amazon-reviews">Amazon Sentiment Analyser </a><a href = "https://huggingface.co/sohan-ai/sentiment-analysis-model-amazon-reviews" class="icon brands fa-github"></a></b> 
+									<li>Engineered and fine-tuned a custom Sentiment Analysis model for Amazon reviews, achieving over 45,000 downloads on Hugging Face and a vibrant open-source community.</li>
+									<li>Deployed and integrated the model into real-world applications, gaining experience in NLP production environments.</li>
+									<li>Collaborated closely with both professors and peers to iteratively refine the model, harnessing a diverse range of expertise to elevate its performance and broaden its scope of applications.</li>
+								</ul>
+								<ul><b><a href = "https://github.com/tanmay-m/Rental-Service-Management-System">Rental Management System </a><a href = "https://github.com/tanmay-m/Rental-Service-Management-System" class="icon brands fa-github"></a></b> 
+									<li>Led and managed a 7-member team in the end-to-end development of a full-stack web application, delivering efficient rental management system services.</li>
+									<li>Orchestrated the integration of advanced features including Google Authentication, Payment Gateway, Google Maps API, and a responsive Chatbot for enhanced user interaction.</li>
+									<li>Leveraged Django Python for robust backend functionality and React.js for creating an intuitive and dynamic frontend interface, optimizing user experience with Docker for efficient containerization. </li>
+								</ul>
 								<ul><b>Employee Attrition Prediction.</b><n><i>(Technologies: Software Development using Django Framework with Python.)</i>                                                                                                             </i>      	
 									<li>Spearheaded an attrition prediction system for robust companies by bypassing the generic mono-pool algorithm selection that achieved flexibility and improved accuracy by 50%.</li>
 									<li>Used Support Vector Machine, Gradient Boosting, Naïve Bayes, and Neural Network prediction models.</li>
 									<li><a href = "https://github.com/tanmay-m/Research-Paper">Research Paper </a><a href = "https://github.com/tanmay-m/Research-Paper" class="icon brands fa-github"></a></li>
 								</ul>
+			
 								<ul><b><a href = "https://github.com/tanmay-m/Home-Credit-Default-Risk-">Home Credit Default Risk </a><a href = "https://github.com/tanmay-m/Home-Credit-Default-Risk-" class="icon brands fa-github"></a></b> 
 									<li>Orchestrated and configured classification model with Model Pipelining, Exploratory Data Analysis and Feature Selection using Machine Learning and Deep Learning Algorithm like Multilayer Perceptron, Decision Trees and achieved an overall accuracy of 93% with hyperparameter tuning. Improved base accuracy using SoftMax and Rectified Linear Unit activation function with Tensor Board result visualization. </li>
 								</ul>
@@ -119,7 +137,7 @@
 							<span class="image main"><img src="images/Indiana-University-Symbol.png" alt="" /></span>
 							<p>Here is my academic journey!</p>
 							<ul><b>Indiana University, Bloomington</b>
-								<li><i>Coursework: </i>Applied Algorithms, Elements of Artificial Intelligence, Applied Machine Learning, Data Mining, Software Engineering and Database Design</li>
+								<li><i>Coursework: </i>Applied Algorithms, Elements of Artificial Intelligence, Applied Machine Learning, Data Mining, Software Engineering, Database Design, NLP</li>
 								<li><i>GPA: </i>3.9</li>
 								<li><i>Duration: </i>Fall 2022 - Spring 2024</li>
 							</ul>
@@ -149,18 +167,23 @@
 								<li>MySQL</li>
 								<li>SQL</li>
 								<li>AWS Dynamo DB</li>
+								<li>PostgreSQL</li>
 							</ul>
 							<ul><b>Frameworks and Technologies</b>
 								<li>Django</li>
 								<li>Flask</li>
 								<li>Postman</li>
 								<li>PyTorch</li>
+								<li>TensorFlow</li>
 								<li>Google Firecloud/Firebase</li>
 								<li>AWS CloudWatch</li>
 								<li>AWS S3</li>
 								<li>Microsoft Power BI</li>
 								<li>Git/GitHub</li>
 								<li>Bitbucket</li>
+								<li>Transformers</li>
+								<li>Large Language Modeling</li>
+								<li>Natural Language Processing</li>
 							</ul>
 
 							
