--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 							<span class="image main"><img src="images/Indiana-University-Symbol.png" alt="" /></span>
 							<p>Here is my academic journey!</p>
 							<ul><b>Indiana University, Bloomington</b>
-								<li><i>Coursework: </i>Applied Algorithms, Elements of Artificial Intelligence, Applied Machine Learning, Data Mining, Software Engineering, Database Design, NLP</li>
+								<li><i>Coursework: </i>Applied Algorithms, Elements of Artificial Intelligence, Applied Machine Learning, Data Mining, Software Engineering, Database Design, Natural Language Processing</li>
 								<li><i>GPA: </i>3.9</li>
 								<li><i>Duration: </i>Fall 2022 - Spring 2024</li>
 							</ul>
