--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Tanmay Mahindrakar</h1>
-								<p><h3>Masters of Computer Science at Indiana University, Bloomington</h3><br/>
-								<h3>Welcome to my webiste!</h3></p>
+								<p><h3>Masters of Computer Science at Indiana University</h3><br/>
+								<h3>Welcome to my website!</h3></p>
 								<p><h3>You can contact me at: <b><i>tmahind@iu.edu</i></b></h3></p>
 								<p><ul class="icons">
 									<li><a href="https://github.com/tanmay-m" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
