--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/laptop.png" alt="" /></span>
 								<p>I started my journey as a research intern with Indian Statistical Institute followed by working with the technology giant, Tata Consultancy Services as a software developer. During my pursuit of the Masters program, I had the privilege of collaborating with Ericsson, where I engaged with cutting-edge technology. I undertook a range of responsibilities, which are outlined below.</p>
+								<ul>
+									<b>Data Analyst at Indiana University</b>
+									<li>Integrated fine-tuned Large Language Models (LLMs), enhancing natural language processing capabilities for insurance clients using cloud services.</li>
+									<li>Synchronized a classification model with Model Pipelining, Exploratory Data Analysis (EDA), Feature Selection, and Feature Engineering using PySpark and Machine Learning, while integrating Tableau dashboards, achieving an accuracy of 93%.</li>
+									<li>Optimized complex SQL queries for data retrieval, improving database performance and query execution time by 30%.</li>
+									<li>Visualized Key Performance Indicators (KPIs) to identify trends and efficiently extract articles from the knowledge base.</li>
+								</ul>
 								<ul><b>Data Science Intern at Ericsson:</b>
 									<li>Developed Large Language Models, including Masked Language Modeling, from scratch. Successfully trained the model on customer telecom data, achieving a strong perplexity score.</li>
 									<li>Researched and harnessed fine-tuned GPT-based Causal Language Models and Masked Language Models for downstream tasks, significantly boosting entity recognition accuracy beyond standard Language Models.</li>
@@ -138,7 +145,7 @@
 							<p>Here is my academic journey!</p>
 							<ul><b>Indiana University, Bloomington</b>
 								<li><i>Coursework: </i>Applied Algorithms, Elements of Artificial Intelligence, Applied Machine Learning, Data Mining, Software Engineering, Database Design, Natural Language Processing</li>
-								<li><i>GPA: </i>3.9</li>
+								<li><i>GPA: </i>3.94</li>
 								<li><i>Duration: </i>Fall 2022 - Spring 2024</li>
 							</ul>
 							<ul><b>University of Pune</b>
@@ -178,10 +185,12 @@
 								<li>Google Firecloud/Firebase</li>
 								<li>AWS CloudWatch</li>
 								<li>AWS S3</li>
+								<li>Azure</li>
 								<li>Microsoft Power BI</li>
 								<li>Git/GitHub</li>
 								<li>Bitbucket</li>
 								<li>Transformers</li>
+								<li>Retrieval Augmented Generation (RAG)</li>
 								<li>Large Language Modeling</li>
 								<li>Natural Language Processing</li>
 							</ul>
