--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 		
 			<h3 style="color: #007BFF; display: flex; align-items: center; gap: 10px;">
 				<img src="images/tuljai_enterprises_logo.jpg" alt="Tuljai Enterprises" style="width: 50px; height: auto;"> 
-				Software Engineer Intern at Tuljai Enterprises
+				Software Developer Intern at Tuljai Enterprises
 			</h3>
 			<p style="font-size: 16px; color: gray;">Pune, India | Jul 2020 - Jul 2021</p>
 			<ul style="font-size: 16px; line-height: 1.6;">
@@ -169,7 +169,7 @@
 				<li>Designed a <b>hybrid architecture</b> with <b>React.js</b> (frontend), <b>Node.js & Express.js</b> (backend), and <b>MongoDB</b> for efficient data management.</li>
 				<li><b>Tech Stack:</b> React.js, Node.js, Express.js, MongoDB, Redux.</li>
 				<li>
-					<a href="https://github.com/ashutosh-jagdale/Movie-Booking-Management-System" target="_blank" style="color: #007BFF;">
+					<a href="https://github.com/ashutosh-jagdale/Movie-Booking-Management-System" target="_blank" style="color: #ffffff;">
 						<i class="fab fa-github" style="font-size: 18px; margin-right: 5px;"></i> Movie Booking System
 					</a>
 				</li>
@@ -182,7 +182,7 @@
 				<li>Implemented <b>API gateway routing</b> and centralized configuration for seamless integration.</li>
 				<li><b>Tech Stack:</b> Angular, Spring Boot, MySQL, Spring Cloud.</li>
 				<li>
-					<a href="https://github.com/ashutosh-jagdale/Epharmacy" target="_blank" style="color: #007BFF;">
+					<a href="https://github.com/ashutosh-jagdale/Epharmacy" target="_blank" style="color: #ffffff;">
 						<i class="fab fa-github" style="font-size: 18px; margin-right: 5px;"></i> Epharmacy
 					</a>
 				</li>
@@ -195,12 +195,12 @@
 				<li>Performed <b>feature engineering</b> for improved accuracy in classification.</li>
 				<li><b>Tech Stack:</b> Python, Machine Learning, NLP.</li>
 				<li>
-					<a href="https://github.com/ashutosh-jagdale/Fake-News-Detection-Using-Machine-Learning" target="_blank" style="color: #007BFF;">
+					<a href="https://github.com/ashutosh-jagdale/Fake-News-Detection-Using-Machine-Learning" target="_blank" style="color: #ffffff;">
 						<i class="fab fa-github" style="font-size: 18px; margin-right: 5px;"></i> Fake News Detection Using Machine Learning
 					</a>
 				</li>
 				<li>
-					<a href="https://irjet.net/archives/V8/i7/IRJET-V8I7712.pdf" target="_blank" style="color: #007BFF;">
+					<a href="https://irjet.net/archives/V8/i7/IRJET-V8I7712.pdf" target="_blank" style="color: #ffffff;">
 						<i class="fas fa-file-pdf" style="font-size: 18px; margin-right: 5px;"></i> IRJET Paper
 					</a>
 				</li>
@@ -213,7 +213,7 @@
 				<li>Utilized <b>MySQL</b> for structured data storage and optimized queries for fast retrieval.</li>
 				<li><b>Tech Stack:</b> JavaScript, HTML, CSS, Bootstrap, PHP, MySQL.</li>
 				<li>
-					<a href="https://github.com/ashutosh-jagdale/Inventory-Management-System" target="_blank" style="color: #007BFF;">
+					<a href="https://github.com/ashutosh-jagdale/Inventory-Management-System" target="_blank" style="color: #ffffff;">
 						<i class="fab fa-github" style="font-size: 18px; margin-right: 5px;"></i> Inventory Management System
 					</a>
 				</li>
@@ -226,7 +226,7 @@
 				<li>Designed a <b>microservices-based architecture</b> with <b>Spring Boot, Angular, and MySQL</b> to enhance scalability.</li>
 				<li><b>Tech Stack:</b> Spring Boot, Spring Cloud, Angular, MySQL, JWT Authentication.</li>
 				<li>
-					<a href="https://github.com/ashutosh-jagdale/InfyRail" target="_blank" style="color: #007BFF;">
+					<a href="https://github.com/ashutosh-jagdale/InfyRail" target="_blank" style="color: #ffffff;">
 						<i class="fab fa-github" style="font-size: 18px; margin-right: 5px;"></i> InfyRail
 					</a>
 				</li>
@@ -239,7 +239,7 @@
 				<li>Implemented <b>secure authentication mechanisms</b> and <b>real-time event-based data capturing</b>.</li>
 				<li><b>Tech Stack:</b> Adobe Experience Platform (AEP), Postman, API Development.</li>
 				<li>
-					<a href="https://experienceleague.adobe.com/en/docs/experience-platform/sources/connectors/analytics/mixpanel" target="_blank" style="color: #007BFF;">
+					<a href="https://experienceleague.adobe.com/en/docs/experience-platform/sources/connectors/analytics/mixpanel" target="_blank" style="color: #ffffff;">
 						<i class="fas fa-link" style="font-size: 18px; margin-right: 5px;"></i> Mixpanel - Adobe Experience Platform Source Connector
 					</a>
 				</li>
