--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
                 <ul class="icons">
 					<a href="mailto:ashutosh.s.jagdale@gmail.com" class="icon fas fa-envelope" style="font-size: 22px; color: #ffffff; margin-right: 15px;"></a>
 					<a href="https://github.com/ashutosh-jagdale" class="icon brands fa-github" style="font-size: 22px; color: #ffffff; margin-right: 15px;"></a>
-					<a href="https://www.linkedin.com/in/ashutosh-jagdale/" class="icon brands fa-linkedin" style="font-size: 22px; color: #ffffff;"></a>
+					<a href="https://www.linkedin.com/in/ashutosh-jagdale/" class="icon brands fa-linkedin" style="font-size: 22px; color: #ffffff; margin-right: 15px;"></a>
+					<a href="https://leetcode.com/u/ashutosh_jagdale/" target="_blank" style="margin-right: 15px; text-decoration: none;">
+						<img src="https://upload.wikimedia.org/wikipedia/commons/1/19/LeetCode_logo_black.png" alt="LeetCode" style="width: 22px; height: 22px; filter: invert(1);">
+					</a>					
                 </ul>
             </div>
         </div>
