--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 		<article id="intro">
 			<h2 class="major">📜 Introduction</h2>
-			<span class="image main"><img src="images/portfolio_photo.jpg" alt="Ashutosh Jagdale" /></span>
+			<span class="image main"><img src="images\Portfolio_Image.JPG" alt="Ashutosh Jagdale" /></span>
 		
 			<p style="font-size: 18px; text-align: justify;">
 				<b>Hello! I'm <span style="color: #007BFF;">Ashutosh Jagdale</span> 👨‍💻</b><br>
