--- a/index.html
+++ b/index.html
@@ -106,6 +106,20 @@
 			</p>
 		
 			<hr style="border-top: 2px solid #007BFF; margin: 20px 0;">
+
+			<h3 style="color: #007BFF; display: flex; align-items: center; gap: 10px;">
+				<img src="images/hoosiercommunitynetwork_logo.jpeg" alt="Heartland Community Network" style="width: 50px; height: auto;"> 
+				Full Stack Developer at Heartland Community Network
+			</h3>
+			<p style="font-size: 16px; color: gray;">Bloomington, IN | Mar 2025 - Present</p>
+			<ul style="font-size: 16px; line-height: 1.6;">
+				<li>Spearheaded the development of a <b>graduate-focused career services platform</b> with secure <b>Clerk-based authentication</b> and role-based access control.</li>
+				<li>Engineered <b>dynamic dashboards</b> and protected routes using <>React, React Router</b>, and custom hooks for user flow management.</li>
+				<li>Designed <b>modular, responsive UI components</b> with <b>TailwinbdCSS</b> to ensure cohesive UX across devices.</li>
+				<li>Integrated <b>resume-building tools, cover letter guidance, job search resources</b>, and <b>international student support</b> modules.</li>
+				<li>Enabled <b>PDF resume generation</b> and <b>real-time preview</b> improving user output accuracy and experience.</li>
+				<li>Implemented <b>smooth transitions, animations</b>, and modern interface flows with <b>Framer Motion</b> for elevated interactivity.</li>
+			</ul>			
 		
 			<h3 style="color: #007BFF; display: flex; align-items: center; gap: 10px;">
 				<img src="images/Indiana_University_seal.svg.png" alt="Indiana University" style="width: 50px; height: auto;"> 
@@ -164,7 +178,24 @@
 			</p>
 		
 			<hr style="border-top: 2px solid #007BFF; margin: 20px 0;">
-		
+
+			<h3 style="color: #007BFF;">🚌 IndyGo Ridership PowerBI Dashboard</h3>
+			<ul style="font-size: 16px; line-height: 1.6;">
+				<li>Developed an <b>interactive data visualization dashboard</b> using <b>Power BI</b> for the ENGR-E 583: Information Visualization course at <b>Indiana University Bloomington</b>.</li>
+				<li>Analyzed <b>20.6 million+ ridership records (2022–2024)</b> sponsored by <b>IndyGo (Indianapolis Public Transportation Corporation)</b>.</li>
+				<li>Enabled <b>transit planners, commuters, and city officials</b> to explore ridership trends by day, week, month, and year.</li>
+				<li>Included <b>route- and stop-level insights</b>, <b>peak/off-peak analysis</b>, and <b>comparative metrics by service frequency</b>.</li>
+				<li>Refined the dashboard based on <b>stakeholder feedback</b> to improve usability and support <b>data-driven transit improvements</b>.</li>
+				<li><b>Skills:</b> Power BI, Data Visualization, Python, SQL</li>
+				<li>
+					<a href="images/Dashboard.pdf" target="_blank" style="color: #ffffff;">
+						<a href="https://github.com/ashutosh-jagdale/IndyGo-Ridership-PowerBI-Dashboard" target="_blank" style="color: #ffffff;">
+							<i class="fab fa-github" style="font-size: 18px; margin-right: 5px;"></i> IndyGo Ridership PowerBI Dashboard
+
+					</a>
+				</li>
+			</ul>
+
 			<h3 style="color: #007BFF;">🎬 FlickFix - Movie Booking Management System</h3>
 			<ul style="font-size: 16px; line-height: 1.6;">
 				<li>Developed a <b>scalable movie booking platform</b> enabling users to browse, book tickets, and manage screenings.</li>
@@ -265,7 +296,7 @@
 				<li><b>Big Data & Analytics</b>: Google BigQuery, Apache Kafka</li>
 			</ul>
 		
-			<h3 style="color: #007BFF;">🖥️ Frameworks & Technologies</h3>
+			<h3 style="color: #007BFF;">⚙️ Frameworks & Web Technologies</h3>
 			<ul style="font-size: 16px; line-height: 1.6;">
 				<li><b>Backend</b>: Spring Boot, Django, Flask, FastAPI, Node.js, Express.js</li>
 				<li><b>Frontend</b>: React.js, Angular, Next.js</li>
@@ -288,7 +319,25 @@
 				<li><b>Computer Vision</b>: OpenCV, YOLO, TensorFlow Object Detection</li>
 			</ul>
 		
-			<h3 style="color: #007BFF;">📊 Data Visualization & Business Intelligence</h3>
+			<h3 style="color: #007BFF;">🧠 AI Tools & Platforms</h3>
+			<ul style="font-size: 16px; line-height: 1.6;">
+				<li><b>Platforms</b>: OpenAI API, Hugging Face, LangChain, Pinecone</li>
+				<li><b>Use Cases</b>: LLM-based assistants, RAG, document parsing, prompt engineering</li>
+			</ul>
+		
+			<h3 style="color: #007BFF;">📄 Document Processing</h3>
+			<ul style="font-size: 16px; line-height: 1.6;">
+				<li><b>PDF Tools</b>: React-PDF, pdf-lib, PyPDF2</li>
+				<li><b>Resume/Report Generation</b>: HTML-to-PDF, React-PDF, LaTeX (basic)</li>
+			</ul>
+		
+			<h3 style="color: #007BFF;">🎨 UI & Design Systems</h3>
+			<ul style="font-size: 16px; line-height: 1.6;">
+				<li><b>Styling</b>: Tailwind CSS, Bootstrap, SCSS</li>
+				<li><b>Animation & UX</b>: Framer Motion, ShadCN/UI, Chakra UI</li>
+			</ul>
+		
+			<h3 style="color: #007BFF;">📊 Visualization & BI Tools</h3>
 			<ul style="font-size: 16px; line-height: 1.6;">
 				<li><b>Data Visualization</b>: Matplotlib, Seaborn, Plotly</li>
 				<li><b>BI Tools</b>: Tableau, Power BI, Google Data Studio</li>
@@ -299,7 +348,7 @@
 				<li><b>Version Control</b>: Git, GitHub, GitLab, Bitbucket</li>
 				<li><b>Project Management</b>: JIRA, Confluence, Trello</li>
 			</ul>
-		</article>
+		</article>		
 
 						<!-- Contact -->
 							<!-- <article id="contact">
