--- a/index.html
+++ b/index.html
@@ -108,18 +108,17 @@
 			<hr style="border-top: 2px solid #007BFF; margin: 20px 0;">
 
 			<h3 style="color: #007BFF; display: flex; align-items: center; gap: 10px;">
-				<img src="images/hoosiercommunitynetwork_logo.jpeg" alt="Heartland Community Network" style="width: 50px; height: auto;"> 
-				Full Stack Developer at Heartland Community Network
+				<img src="images/hoosiercommunitynetwork_logo.jpeg" alt="Hoosier Community Network" style="width: 50px; height: auto;"> 
+				Senior Consultant at Hoosier Community Network
 			</h3>
 			<p style="font-size: 16px; color: gray;">Bloomington, IN | Mar 2025 - Present</p>
-			<ul style="font-size: 16px; line-height: 1.6;">
-				<li>Spearheaded the development of a <b>graduate-focused career services platform</b> with secure <b>Clerk-based authentication</b> and role-based access control.</li>
-				<li>Engineered <b>dynamic dashboards</b> and protected routes using <>React, React Router</b>, and custom hooks for user flow management.</li>
-				<li>Designed <b>modular, responsive UI components</b> with <b>TailwinbdCSS</b> to ensure cohesive UX across devices.</li>
-				<li>Integrated <b>resume-building tools, cover letter guidance, job search resources</b>, and <b>international student support</b> modules.</li>
-				<li>Enabled <b>PDF resume generation</b> and <b>real-time preview</b> improving user output accuracy and experience.</li>
-				<li>Implemented <b>smooth transitions, animations</b>, and modern interface flows with <b>Framer Motion</b> for elevated interactivity.</li>
-			</ul>			
+ <ul>
+    <li>Led end-to-end development of a <b>graduate career platform</b> used by MSCS/MSIS students, integrating <b>Clerk-based authentication</b> and <b>role-based access control</b> for secure gated access.</li>
+    <li>Engineered <b>modular dashboards</b> and <b>protected routes</b> with React, React Router, and custom hooks; enhanced UX using <b>TailwindCSS</b> and <b>Framer Motion</b>.</li>
+    <li>Integrated <b>resume builders</b>, real-time <b>PDF preview via react-pdf</b>, ATS-optimized templates, <b>Notion embeds</b>, and job prep tools such as Yoodli, Pramp, and BlueEQ.</li>
+    <li>Developed <b>career planning workflows</b>, LinkedIn outreach templates, structured goal-setting forms, and an <b>International Student Hub</b> with visa-specific job tools.</li>
+    <li>Incorporated continuous feedback from <b>university career coaches</b> to iteratively improve usability, accessibility, and content depth across the platform.</li>
+  </ul>		
 		
 			<h3 style="color: #007BFF; display: flex; align-items: center; gap: 10px;">
 				<img src="images/Indiana_University_seal.svg.png" alt="Indiana University" style="width: 50px; height: auto;"> 
@@ -179,6 +178,25 @@
 		
 			<hr style="border-top: 2px solid #007BFF; margin: 20px 0;">
 
+			  <!-- NEW: Grad Career Platform -->
+  <h3 style="color: #007BFF;">🎓 Grad Career Platform</h3>
+  <ul style="font-size: 16px; line-height: 1.6;">
+    <li>A modern, full-stack <b>career services platform</b> for students and graduates to plan, prepare, and launch their careers.</li>
+    <li>Features <b>Clerk authentication</b> (sign in/up), <b>role-based routing</b> (onboarding, tools), <b>resume & cover letter templates</b>, and <b>job tools</b>.</li>
+    <li>Includes <b>career planning</b>, <b>self-assessment</b>, <b>networking & mentorship guides</b>, and an <b>International Student Hub</b> (OPT/CPT resources).</li>
+    <li>Fully deployed on <b>Vercel</b> with CI/CD from GitHub; 30+ preview deployments and active production updates.</li>
+    <li><b>Tech Stack:</b> React + Vite, React Router v6, Clerk, Tailwind CSS + shadcn/ui, Framer Motion, Vercel.</li>
+    <li>
+      <a href="https://grad-career-platform.vercel.app" target="_blank" style="color: #ffffff;">
+        <i class="fas fa-external-link-alt" style="font-size: 18px; margin-right: 5px;"></i> Live Demo
+      </a>
+      &nbsp;|&nbsp;
+      <a href="https://github.com/ashutosh-jagdale/grad-career-platform" target="_blank" style="color: #ffffff;">
+        <i class="fab fa-github" style="font-size: 18px; margin-right: 5px;"></i> Repository
+      </a>
+    </li>
+  </ul>
+  
 			<h3 style="color: #007BFF;">🚌 IndyGo Ridership PowerBI Dashboard</h3>
 			<ul style="font-size: 16px; line-height: 1.6;">
 				<li>Developed an <b>interactive data visualization dashboard</b> using <b>Power BI</b> for the ENGR-E 583: Information Visualization course at <b>Indiana University Bloomington</b>.</li>
