changes in name

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 			<hr style="border-top: 2px solid #007BFF; margin: 20px 0;">
 
 			<h3 style="color: #007BFF; display: flex; align-items: center; gap: 10px;">
-				<img src="images/hoosiercommunitynetwork_logo.jpeg" alt="Hoosier Community Network" style="width: 50px; height: auto;"> 
-				Senior Consultant at Hoosier Community Network
+				<img src="images/hoosiercommunitynetwork_logo.jpeg" alt="Heartland Community Network" style="width: 50px; height: auto;"> 
+				Senior Consultant at Heartland Community Network
 			</h3>
 			<p style="font-size: 16px; color: gray;">Bloomington, IN | Mar 2025 - Present</p>
  <ul>
