--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 				<img src="images/hoosiercommunitynetwork_logo.jpeg" alt="Heartland Community Network" style="width: 50px; height: auto;"> 
 				Senior Consultant at Heartland Community Network
 			</h3>
-			<p style="font-size: 16px; color: gray;">Bloomington, IN | Mar 2025 - Present</p>
+			<p style="font-size: 16px; color: gray;">Bloomington, IN | Jun 2025 - Sep 2025</p>
  <ul>
     <li>Led end-to-end development of a <b>graduate career platform</b> used by MSCS/MSIS students, integrating <b>Clerk-based authentication</b> and <b>role-based access control</b> for secure gated access.</li>
     <li>Engineered <b>modular dashboards</b> and <b>protected routes</b> with React, React Router, and custom hooks; enhanced UX using <b>TailwindCSS</b> and <b>Framer Motion</b>.</li>
@@ -134,9 +134,9 @@
 		
 			<h3 style="color: #007BFF; display: flex; align-items: center; gap: 10px;">
 				<img src="images/hyphenova_network_logo.jpg" alt="Hyphenova" style="width: 50px; height: auto;"> 
-				Software Developer Intern at Hyphenova
+				Software Engineer Intern at Hyphenova
 			</h3>
-			<p style="font-size: 16px; color: gray;">Los Angeles, CA | Jun 2024 - Dec 2024</p>
+			<p style="font-size: 16px; color: gray;">Remote, USA | Jun 2024 - Aug 2024</p>
 			<ul style="font-size: 16px; line-height: 1.6;">
 				<li>Directed design of <b>scalable user interfaces and notification systems</b> using <b>React Native</b>, achieving high responsiveness across devices.</li>
 				<li>Designed a <b>real-time leaderboard and analytics dashboard</b> using <b>HTML, JavaScript, CSS</b>, with <b>Git for version control</b> and <b>Docker for containerization</b>.</li>
@@ -146,7 +146,7 @@
 		
 			<h3 style="color: #007BFF; display: flex; align-items: center; gap: 10px;">
 				<img src="images/infosys_logo.jpg" alt="Infosys" style="width: 50px; height: auto;"> 
-				Full Stack Developer at Infosys
+				Digital Specialist Engineer (Full Stack Developer) at Infosys
 			</h3>
 			<p style="font-size: 16px; color: gray;">Pune, India | Aug 2021 - Aug 2023</p>
 			<ul style="font-size: 16px; line-height: 1.6;">
