--- a/index.html
+++ b/index.html
@@ -108,17 +108,30 @@
 			<hr style="border-top: 2px solid #007BFF; margin: 20px 0;">
 
 			<h3 style="color: #007BFF; display: flex; align-items: center; gap: 10px;">
+				<img src="images\exl_logo_rgb_orange_pos_002_1.png" alt="EXL" style="width: 50px; height: auto;"> 
+				Full Stack Data Engineer (Consultant II) at EXL
+			</h3>
+			<p style="font-size: 16px; color: gray;">Remote, USA | Sep 2025 - Present</p>
+			<ul style="font-size: 16px; line-height: 1.6;">
+				<li>Led the development of a <b>large-scale pricing data platform</b> on <b>Palantir Foundry</b>, integrating <b>PySpark-based ETL</b>, <b>SQL data modeling</b>, and <b>20+ TypeScript REST APIs</b> to support enterprise pricing lifecycle automation and approval workflows.</li>
+				<li>Scaled and optimized <b>batch operations</b> across thousands of <b>SKU–zone combinations</b> and <b>5K+ activity objects</b>, leveraging <b>Spark tuning</b>, <b>SQL performance optimization</b>, and real-time validation systems for pricing rules and business constraints.</li>
+				<li>Architected <b>governed data infrastructure</b> with <b>ontology design</b>, <b>Object Set API</b>, and <b>MultiLink relationship management</b> to ensure <b>data lineage</b>, <b>audit logging</b>, and relationship consistency across pricing scenarios.</li>
+				<li>Implemented robust <b>business logic</b> for pricing impact calculation, activity merging/splitting, scenario linking, and approval thresholds (<b>$50K / $500K</b>), along with <b>dynamic alerting</b> using the <b>Functions API</b> to ensure compliance, accuracy, and auditability.</li>
+				<li>Enhanced <b>platform resilience</b> through <b>unit, integration, and E2E testing</b>, <b>transaction boundary optimization</b>, and debugging tools, collaborating closely with ops/product teams to meet <b>SLA targets</b> and reduce incident recovery time.</li>
+			</ul>
+
+			<h3 style="color: #007BFF; display: flex; align-items: center; gap: 10px;">
 				<img src="images/hoosiercommunitynetwork_logo.jpeg" alt="Heartland Community Network" style="width: 50px; height: auto;"> 
 				Senior Consultant at Heartland Community Network
 			</h3>
 			<p style="font-size: 16px; color: gray;">Bloomington, IN | Feb 2025 - Sep 2025</p>
- <ul>
-    <li>Led end-to-end development of a <b>graduate career platform</b> used by MSCS/MSIS students, integrating <b>Clerk-based authentication</b> and <b>role-based access control</b> for secure gated access.</li>
-    <li>Engineered <b>modular dashboards</b> and <b>protected routes</b> with React, React Router, and custom hooks; enhanced UX using <b>TailwindCSS</b> and <b>Framer Motion</b>.</li>
-    <li>Integrated <b>resume builders</b>, real-time <b>PDF preview via react-pdf</b>, ATS-optimized templates, <b>Notion embeds</b>, and job prep tools such as Yoodli, Pramp, and BlueEQ.</li>
-    <li>Developed <b>career planning workflows</b>, LinkedIn outreach templates, structured goal-setting forms, and an <b>International Student Hub</b> with visa-specific job tools.</li>
-    <li>Incorporated continuous feedback from <b>university career coaches</b> to iteratively improve usability, accessibility, and content depth across the platform.</li>
-  </ul>		
+			<ul>
+				<li>Led end-to-end development of a <b>graduate career platform</b> used by MSCS/MSIS students, integrating <b>Clerk-based authentication</b> and <b>role-based access control</b> for secure gated access.</li>
+				<li>Engineered <b>modular dashboards</b> and <b>protected routes</b> with React, React Router, and custom hooks; enhanced UX using <b>TailwindCSS</b> and <b>Framer Motion</b>.</li>
+				<li>Integrated <b>resume builders</b>, real-time <b>PDF preview via react-pdf</b>, ATS-optimized templates, <b>Notion embeds</b>, and job prep tools such as Yoodli, Pramp, and BlueEQ.</li>
+				<li>Developed <b>career planning workflows</b>, LinkedIn outreach templates, structured goal-setting forms, and an <b>International Student Hub</b> with visa-specific job tools.</li>
+				<li>Incorporated continuous feedback from <b>university career coaches</b> to iteratively improve usability, accessibility, and content depth across the platform.</li>
+			</ul>		
 		
 			<h3 style="color: #007BFF; display: flex; align-items: center; gap: 10px;">
 				<img src="images/Indiana_University_seal.svg.png" alt="Indiana University" style="width: 50px; height: auto;"> 
